tighten spacing around event titles, fixes #193

--- a/public/css/screen.sass
+++ b/public/css/screen.sass
@@ -40,6 +40,8 @@ ol
 
 h1
   font-size: $large
+  &#event-title
+    margin-bottom: 0.2em
 
 h2
   font-size: $medium
